--- a/jamhacks/backend/templates/index.html
+++ b/jamhacks/backend/templates/index.html
@@ -1,9 +1,7 @@
-# 📁 webappexample/templates/index.html -----
-
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Auth0 Example</title>
+    <title>cool site Example</title>
   </head>
   <body>
     {% if session %}
