move user stuff to context processor

--- a/jamhacks/src/templates/base.html
+++ b/jamhacks/src/templates/base.html
@@ -11,7 +11,7 @@
     {% block content %}{% endblock %}
 
 
-    {% if session %}
+    {% if user %}
     {% include 'nav.html' %}
     {% endif %}
 </body>
