dashboard user is logged in

--- a/jamhacks/src/templates/dashboard.html
+++ b/jamhacks/src/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-  {% if user %}
+  {% if user.is_authenticated %}
   <h1>Welcome {{user.userinfo.name}}!</h1>
   <p><a href="{% url 'logout' %}">Logout</a></p>
   <div><pre>{{pretty}}</pre></div>
