--- a/jamhacks/src/templates/base.html
+++ b/jamhacks/src/templates/base.html
@@ -11,8 +11,8 @@
     {% block content %}{% endblock %}
 
 
-    {% if user.is_authenticated %}
+    <!-- {% if user.is_authenticated %} -->
     {% include 'nav.html' %}
-    {% endif %}
+    <!-- {% endif %} -->
 </body>
 </html>
