--- a/jamhacks/src/templates/dashboard.html
+++ b/jamhacks/src/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div>
   {% if user.is_authenticated %}
-  <h1>Welcome {{user.userinfo.name}}!</h1>
+  <h1>Welcome {{user.username}}!</h1>
   <p><a href="{% url 'logout' %}">Logout</a></p>
   <div><pre>{{pretty}}</pre></div>
   {% else %}
