--- a/jamhacks/src/templates/dashboard.html
+++ b/jamhacks/src/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load extra_filters %}
 
 {% block content %}
 <div>
@@ -7,7 +8,7 @@
   <p>Thanks for logging in.</p>
 
   You have {{user.points}} points!
-  {% 100|sub:user.points|mod:100 %} points until next badge!
+  {{ 100|sub:user.points|mod:100 }} points until next badge!
 
   <!-- user's quests -->
   {{user.quests.all}}
