--- a/jamhacks/static/base.css
+++ b/jamhacks/static/base.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Simply Serif";
+    src: url('fonts/SimplySerif-Book.ttf');
+    src: url('fonts/SimplySerif-BookItalic.ttf');
+    src: url('fonts/SimplySerif-Bold.ttf');
+    src: url('fonts/SimplySerif-BoldItalic.ttf');
+  }
+
 :root {
     --size: 1.4rem;
     --bg: #D93B3B;
@@ -13,7 +21,8 @@
 
 body {
     margin: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Simply Serif', serif;
+    font-weight: 'Book';
     font-size: var(--size);
     color: var(--fg);
     background: var(--bg);
