--- a/jamhacks/src/templates/quests.html
+++ b/jamhacks/src/templates/quests.html
@@ -15,6 +15,7 @@
     <div class="card-body">
       <h5 class="card-title">{{quest.name}}</h5>
       <p class="card-text">{{quest.description}}</p>
+      <a href="/" class="stretched-link"></a>
     </div>
   {% endfor %}
     {% else %}
