--- a/jamhacks/src/templates/start.html
+++ b/jamhacks/src/templates/start.html
@@ -11,7 +11,7 @@
     </div>
   {% endfor %}
 
-  <button>start</button>
+  <a href="/start_session/{{quest.pk}}" class="stretched-link">Start</a>
 
 </div>
 {% endblock %}
