--- a/jamhacks/src/templates/registration/login.html
+++ b/jamhacks/src/templates/registration/login.html
@@ -7,46 +7,46 @@ Login
 {% endblock %}
 
 {% block content %}
-<div class="row" style="margin-bottom: 3%;">
+  <div class="row" style="margin-bottom: 3%;">
     <h1 style="text-align: center; margin-bottom: 0%;">login</h1>
     <p style="text-align: center;">Read to dive back in?</p>
-</div>
-<div class="container mx-auto" style="max-width:500px;">
+  </div>
+  <div class="container mx-auto" style="max-width:500px;">
     <form class="form-horizontal" method="post">{% csrf_token %}
-        <fieldset>
-            <legend>{{ title }}</legend>
-            {% for field in form %}
-            {% if field.errors %}
-            <div class="form-group" style="margin-top:1%">
-                <label class="control-label">{{ field.label }}</label>
-                {{field|addcss:"form-control reg-form-field"}}
-                <div class="controls">
-                    <span class="help-inline">
-                        <small class="errors">{% for error in field.errors %}{{ error }}{% endfor %}</small>
-                    </span>
-                </div>
-            </div>
-            {% else %}
-            <div class="form-group" style="margin-top:1%">
-                <label class="control-label">{{ field.label }}</label>
-                {{field|addcss:"form-control reg-form-field"}}
-                <div class="controls">
-                    {% if field.help_text %}
-                    <p class="help-inline"><small>{{ field.help_text }}</small></p>
-                    {% endif %}
-                </div>
-            </div>
-            {% endif %}
-            {% endfor %}
-        </fieldset>
-
-
-        <div class="row text-center">
-            <button type="submit" class="btn-block btn btn-primary" name="Create User"
-                style="background:rgba(126, 139, 77, 1);border-color: rgba(126, 139, 77, 1); border-radius:3rem; margin-top:5%">login</button>
+      <fieldset>
+        <legend>{{ title }}</legend>
+        {% for field in form %}
+        {% if field.errors %}
+        <div class="form-group" style="margin-top:1%">
+          <label class="control-label">{{ field.label }}</label>
+          {{field|addcss:"form-control reg-form-field"}}
+          <div class="controls">
+            <span class="help-inline">
+              <small class="errors">{% for error in field.errors %}{{ error }}{% endfor %}</small>
+            </span>
+          </div>
         </div>
-        <p class="text-center" style="margin-top:2%">don't have an account? <a class="colored-link"
-                style="text-decoration: none;" href="/signup">make one here</a>. </p>
+        {% else %}
+        <div class="form-group" style="margin-top:1%">
+          <label class="control-label">{{ field.label }}</label>
+          {{field|addcss:"form-control reg-form-field"}}
+          <div class="controls">
+            {% if field.help_text %}
+            <p class="help-inline"><small>{{ field.help_text }}</small></p>
+            {% endif %}
+          </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+      </fieldset>
+
+
+      <div class="row text-center">
+        <button type="submit" class="btn-block btn btn-primary" name="Create User"
+          style="background:#B8D08F;border-color: #85A451; border-radius:3rem; margin-top:5%">login</button>
+      </div>
+      <p class="text-center" style="margin-top:2%">don't have an account? <a class="colored-link"
+          style="text-decoration: none;" href="/signup">make one here</a>. </p>
     </form>
-</div>
+  </div>
 {% endblock %}
