--- a/jamhacks/src/templates/base.html
+++ b/jamhacks/src/templates/base.html
@@ -51,7 +51,7 @@
         </div>
       </nav>
     </header>
-    <div class="container body-content" style="margin-top: 5%;">
+    <div class="container body-content" style="margin-top: 5%; margin-bottom: 20%;">
       {% bootstrap_messages %}
 
       {% block content %}{% endblock %}
