--- a/jamhacks/src/templates/registration/signup.html
+++ b/jamhacks/src/templates/registration/signup.html
@@ -9,12 +9,12 @@ Register
 {% block content %}
 <div class="row" style="margin-top: 7%;  margin-bottom: 3%;">
     <h1 style="text-align: center; margin-bottom: 0%;">register</h1>
-    <p style="text-align: center;">Not a penguin yet? Hurry up and join the flock.</p>
 </div>
 <div class="container mx-auto" style="max-width:500px;">
     <form class="form-horizontal" method="post">{% csrf_token %}
         <fieldset>
             <legend>{{ title }}</legend>
+            <hr>
             {% for field in form %}
             {% if field.errors %}
             <div class="form-group" style="margin-top:1%">
@@ -32,7 +32,7 @@ Register
                 {{field|addcss:"form-control reg-form-field"}}
                 <div class="controls">
                     {% if field.help_text %}
-                    <p class="help-inline"><small>{{ field.help_text }}</small></p>
+                    <p class="help-inline" style="margin-bottom:0.5em"><small>{{ field.help_text }}</small></p>
                     {% endif %}
                 </div>
             </div>
@@ -43,7 +43,7 @@ Register
 
         <div class="row text-center">
             <button type="submit" class="btn-block btn btn-primary" name="Create User"
-                style="background:rgba(126, 139, 77, 1);border-color: rgba(126, 139, 77, 1); border-radius:3rem; margin-top:5%">sign
+                style="background:#B8D08F;border-color: #85A451; border-radius:3rem; margin-top:5%;color:#5E4221;">sign
                 up</button>
         </div>
         <p class="text-center" style="margin-top:2%">already have an account? <a class="colored-link"
