--- a/jamhacks/static/site.css
+++ b/jamhacks/static/site.css
@@ -231,12 +231,11 @@ a:hover{
     background-color: #ffb53fc0;
 }
 .header{
-    background-size: 1rem 1rem;
-    background-image: url('https://media.discordapp.net/attachments/759867023885860934/1117362376124137532/image.png');
+    background: linear-gradient(#B8D08FFF, #B8D08F22);
 }
 
 .nav-item{
-    color:  #5E4221;
+    color:  #82674a;
     font-size: 1.5rem;
 
 }
@@ -259,21 +258,23 @@ a:hover{
   i {
     padding: 0.2rem;
     font-size: 3rem;
-    color: #000;
   }
 
   .title {
     color: #677353;
-    font-size: 1.75rem;
+    font-size: 36px;
     font-weight: bold;
     text-align: center;
     align-items: center;
+    padding-top: 25px;
+    margin-bottom: 0.2rem;
   }
 
   .subtitle{
-    color: #acbf8e;
-    font-size: 1.2rem;
+    color: #77924a;
+    font-size:20px;
     font-style: italic;
     text-align: center;
     align-items: center;
+    padding-bottom: 25px;
   }
