change some hrefs

--- a/jamhacks/src/templates/base.html
+++ b/jamhacks/src/templates/base.html
@@ -44,9 +44,9 @@
       </div>
       <nav class="navbar fixed-bottom bg-body-tertiary">
         <div class="container-fluid" style="width: 55%">
-          <a class="nav-item" href="/dashboard"><i class="fa-solid fa-house"></i></a>
+          <a class="nav-item" href="/"><i class="fa-solid fa-house"></i></a>
           <a class="nav-item" href="/socials"><i class="fa-solid fa-users"></i></a>
-          <a class="nav-item" href="/start"><i class="fa-solid fa-dumbbell"></i></a>
+          <a class="nav-item" href="/quests"><i class="fa-solid fa-dumbbell"></i></a>
           <a class="nav-item" href="/profile"><i class="fa-solid fa-circle-user"></i></a>
         </div>
       </nav>
