--- a/jamhacks/src/templates/base.html
+++ b/jamhacks/src/templates/base.html
@@ -1,5 +1,6 @@
 {% load django_bootstrap5 %}
 {% load static %}
+{% load pwa %}
 
 {% bootstrap_css %}
 {% bootstrap_javascript %}
@@ -33,6 +34,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicons/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicons/favicon-16x16.png' %}">
   <link rel="manifest" href="{% static 'site.webmanifest' %}">
+          {% progressive_web_app_meta %}
+
 </head>
 
 <body>
