--- a/jamhacks/src/templates/profile.html
+++ b/jamhacks/src/templates/profile.html
@@ -37,7 +37,7 @@
   <p>current streak: {{user.current_streak}} days ❄️</p>
   <img src="../../static/assets/calendar-no-streak.png" alt="" style="width: 500px;">
   {% endif %}
-
+  <p><a href="{% url 'logout' %}">Logout</a></p>
   {% else %}
   <div>Cool site, but you are not logged in. </div>
   <p><a href="{% url 'login' %}">Login here</a></p>
