--- a/jamhacks/src/templates/start_session.html
+++ b/jamhacks/src/templates/start_session.html
@@ -10,7 +10,7 @@
   {% elif quest == 2 %}
   <img src="../static/assets/lateral-raise.gif" alt="" style='width: 500px;'>
   {% else %}
-  <h1>Sorry we don't have this exericse implemented yet</h1>
+  <h1>Sorry we don't have this exercise implemented yet</h1>
   {% endif %}
 
   {{ quests }}
