--- a/jamhacks/src/templates/base.html
+++ b/jamhacks/src/templates/base.html
@@ -59,6 +59,9 @@
         <a class="nav-item" href="/socials"><i class="fa-solid fa-users"></i></a>
         <a class="nav-item" href="/quests"><i class="fa-solid fa-dumbbell"></i></a>
         <a class="nav-item" href="/profile"><i class="fa-solid fa-circle-user"></i></a>
+        {% if user.is_authenticated %}
+        <a class="nav-item" href="/logout"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+        {% endif %}
       </div>
     </nav>
   </footer>
