--- a/jamhacks/src/templates/start_session.html
+++ b/jamhacks/src/templates/start_session.html
@@ -5,9 +5,11 @@
 {% block content %}
 <div>
   <h1>start session</h1>
-  {% if quest == 1 %}
+  {{ exercise }}
+
+  {% if exercise.pk == 1 %}
   <img src="../static/assets/pushup.gif" alt="" style='width: 500px;'>
-  {% elif quest == 2 %}
+  {% elif exercise.pk == 2 %}
   <img src="../static/assets/lateral-raise.gif" alt="" style='width: 500px;'>
   {% else %}
   <h1>Sorry we don't have this exercise implemented yet</h1>
