--- a/jamhacks/src/templates/start_session.html
+++ b/jamhacks/src/templates/start_session.html
@@ -15,6 +15,7 @@
   <h1>Sorry we don't have this exercise implemented yet</h1>
   {% endif %}
 
-  {{ quests }}
+  {{ exercise }}
+  <a href="/results/">Finished</a>
 </div>
 {% endblock %}
