--- a/jamhacks/src/templates/dashboard.html
+++ b/jamhacks/src/templates/dashboard.html
@@ -10,36 +10,58 @@
   You have {{user.points}} points!
   {{ 100|sub:user.points|mod:100 }} points until next badge!
 
-  <!-- user's quests -->
-  {{user.quests.all}}
-  <!-- all quests is user doesn't have quests -->
   <div class="row gx-5">
-
-  {% for quest in quests %}
-  <div class="col-md-4 col-sm-2 event-card card">
-      <div class="card-body">
-          <div class="row">
-              <div class="col">
-                  <a href="#" class="card-title stretched-link" style="text-decoration: none; color:#523911"><h5>{{ quest.name }}</h5></a>
-                  <h6 class="card-subtitle mb-2 text-muted">{{ event.organizer }}</h6>
-                  {% for exercise in quest.exercises.all %}
-                  <p class="card-text">{{exercise.name}}</p>
-                  {% endfor %}
-                  <a href="/start/{{quest.pk}}" class="stretched-link"></a>
-                  <br>
-              </div>
-              <div class="col points-blob text-center vertical-center-smol" style="max-width: 5rem;">
-                  <div class="">
-                  <p class="points-num align-middle" style=" margin-bottom: 0">30</p>
-                  <p class="">points</p>
-                  </div>
-              </div>
+  <!-- user's quests -->
+  {% if user.quests.all %}
+    {% for quest in user.quests.all %}
+    <div class="col-md-4 col-sm-2 event-card card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col">
+                    <a href="#" class="card-title stretched-link" style="text-decoration: none; color:#523911"><h5>{{ quest.name }}</h5></a>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ event.organizer }}</h6>
+                    {% for exercise in quest.exercises.all %}
+                    <p class="card-text">{{exercise.name}}</p>
+                    {% endfor %}
+                    <a href="/start/{{quest.pk}}" class="stretched-link"></a>
+                    <br>
+                </div>
+                <div class="col points-blob text-center vertical-center-smol" style="max-width: 5rem;">
+                    <div class="">
+                    <p class="points-num align-middle" style=" margin-bottom: 0">30</p>
+                    <p class="">points</p>
+                    </div>
+                </div>
+            </div>
           </div>
-
-      </div>
-  </div>
-
-  {% endfor %}
+        </div>
+      {% endfor %}
+  {% else %}
+    <!-- all quests is user doesn't have quests -->
+    {% for quest in quests %}
+    <div class="col-md-4 col-sm-2 event-card card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col">
+                    <a href="#" class="card-title stretched-link" style="text-decoration: none; color:#523911"><h5>{{ quest.name }}</h5></a>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ event.organizer }}</h6>
+                    {% for exercise in quest.exercises.all %}
+                    <p class="card-text">{{exercise.name}}</p>
+                    {% endfor %}
+                    <a href="/start/{{quest.pk}}" class="stretched-link"></a>
+                    <br>
+                </div>
+                <div class="col points-blob text-center vertical-center-smol" style="max-width: 5rem;">
+                    <div class="">
+                    <p class="points-num align-middle" style=" margin-bottom: 0">30</p>
+                    <p class="">points</p>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    {% endif %}
 </div>
 
     Your current streak is {{user.current_streak}} days!
