--- a/jamhacks/src/templates/start_session.html
+++ b/jamhacks/src/templates/start_session.html
@@ -6,8 +6,10 @@
 <div>
   <h1>start session - {{ exercise }} </h1>
   {% if exercise.pk == 1 %}
+  <h4>Here the opencv camera would track reps and comment on form</h4>
   <img src="../static/assets/pushup.gif" alt="" style='width: 500px;'>
   {% elif exercise.pk == 2 %}
+  <h4>Here the opencv camera would track reps and comment on form</h4>
   <img src="../static/assets/lateral-raise.gif" alt="" style='width: 500px;'>
   {% else %}
   <h4>Sorry we don't have this exercise implemented yet</h4>
